 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 * 
 * $Id$
 */

TreeTank 4.13
-------------
+ Moved Axis classes to axislayer package.
+ Fixed bug with remove() in IWriteTransaction. Now also deleting
  descendants.
+ SAXGenerator bug fixed.
+ SAXGenerator now accepting IAxis as input for more convenience.
+ IAxis makes its transaction available to the public.
+ IAxis now public API and can be used instead of Iterable<INode>.
+ Made Node, Page, and Axis abstract and renamed them accordingly.
 
TreeTank 4.12
-------------
+ Added pagelayer and moved all nodes there.
+ Binary incompatibility to previous releases due to pagelayer changes.
+ IWriteTransaction now comes with insertElementAs... and insertTextAs...
+ Major rework of pagelayer. Node is split into Document, Element, and Text.
+ Add extended API of INode to IReadTransaction for convenience.
+ ISession tells absolute path, file name, and whether it is
  encrypted or checksummed.
 
TreeTank 4.11
-------------
+ Binary incompatibility to previous releases due to revision timestamp.
+ Optimized descendant algorithm.
+ Added timestamp to each revision.
+ Extended INode API for convenience.
+ INode can be bound to transaction for immediate node-based navigation.
+ Removed IAxisIterator and its implementations.

TreeTank 4.10
-------------
+ IReadTransaction move methods now immediately return INode.
+ Binary incompatibility to previous releases due to Page automatization.
+ Page replaces IPage to make pagelayer package code less error prone.
+ Safely switch between commits.
+ Session makes sure that there is only one session bound to some TreeTank
  file at any time.
 
TreeTank 4.9
------------